packages/runners/swc-plugin-runners/tests/errors/non-async-function/output.js
export function badRunner(_ctx) {
  return { name: "test", status: "pass" };
}
